Fix warnings ready for Java 9 (#1658)